--- a/exp.ipynb
+++ b/exp.ipynb
@@ -294,65 +294,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\emmet\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\base.py:324: UserWarning: Trying to unpickle estimator TfidfTransformer from version 1.0.2 when using version 1.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/modules/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\emmet\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\base.py:324: UserWarning: Trying to unpickle estimator TfidfVectorizer from version 1.0.2 when using version 1.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/modules/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\emmet\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\base.py:324: UserWarning: Trying to unpickle estimator SVC from version 1.0.2 when using version 1.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/modules/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([5.])"
+       "array([4.])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from config import *\n",
+    "import pickle\n",
+    "import importlib\n",
+    "from pipeline import digest\n",
+    "\n",
     "f = open(TFID_PATH, \"rb\")\n",
     "tfid = pickle.load(f)\n",
+    "f.close()\n",
+    "\n",
+    "f = open(SVC_PATH, \"rb\")\n",
+    "model = pickle.load(f)\n",
     "f.close()\n",
     "\n",
     "f = open(\"example_review.txt\", \"r\")\n",
     "body = f.read()\n",
     "f.close()\n",
     "\n",
-    "import pipeline\n",
-    "importlib.reload(pipeline)\n",
-    "from pipeline import digest\n",
-    "svc.predict(digest(body, tfid))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "y_pred = cross_val_predict(KNeighborsClassifier(n_neighbors=3, weights=\"distance\"), X, y, cv = 5)\n",
-    "visualize_confusion_matrix(confusion_matrix(y, y_pred))\n",
-    "print(accuracy_score(y, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "\n",
-    "y_pred = cross_val_predict(GaussianNB(), X, y, cv = 5)\n",
-    "visualize_confusion_matrix(confusion_matrix(y, y_pred))\n",
-    "print(accuracy_score(y, y_pred))"
+    "model.predict(digest(body, tfid))"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "daa9625b8f58bb0d1614911a278160b2ea4fc8855d7594ccd7e1358f69e6912c"
+   "hash": "b3eec166a97570c02b2c51c8c0eda21c757de920396f48d8fa8f9e497995295d"
   },
   "kernelspec": {
    "display_name": "Python 3.9.7 64-bit",
@@ -369,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
