--- a/exp.ipynb
+++ b/exp.ipynb
@@ -71,22 +71,26 @@
     "\n",
     "depth = len(lines)\n",
     "\n",
+    "# Iterate through reviews\n",
     "raw = [{}]*len(lines)\n",
     "for i in range(1, min(depth, len(lines))):\n",
     "    bigrams = lines[i].split(\" \")\n",
     "    raw[i] = {}\n",
     "    for bigram in bigrams:\n",
     "            try:\n",
+    "                # Spell check both words in the bigram\n",
     "                colon = bigram.index(\":\")\n",
     "                key = bigram[:colon]\n",
     "                words = key.split(\"_\")\n",
     "                key = \"_\".join([spell(word) for word in words])\n",
+    "                # remove bigrams with digits\n",
     "                if not any(str.isdigit(c) for c in key):\n",
     "                    raw[i][key] = bigram[colon + 1:]\n",
     "            except:\n",
     "                continue\n",
     "labels = []\n",
     "lineDicts = []\n",
+    "# Create list of labels \n",
     "for line in raw:\n",
     "    try:\n",
     "        labels.append(float(line[\"#label#\"]))\n",
@@ -94,18 +98,19 @@
     "        lineDicts.append(line)\n",
     "    except KeyError:\n",
     "        continue\n",
-    "\n",
+    "# list of strings containing bigrams - prevalence == original frequency\n",
     "lineStrings = []\n",
     "for i in range(0, len(lineDicts)):\n",
     "    linestr = \"\"\n",
     "    for key, value in lineDicts[i].items():\n",
     "        linestr += ((key + \" \")*int(value))\n",
     "    lineStrings.append(linestr)\n",
-    "\n",
+    "# Transform the list of strings into sparse matrix of features\n",
     "tfidf_vectorizer = TfidfVectorizer()\n",
     "bag_of_words = tfidf_vectorizer.fit_transform(lineStrings)\n",
     "feature_names = tfidf_vectorizer.get_feature_names()\n",
     "\n",
+    "# Write features to a file so we don't have to run this twice\n",
     "f = open(FEATURE_PATH, \"wb\")\n",
     "pickle.dump(bag_of_words, f)\n",
     "f.close()\n",
@@ -113,9 +118,10 @@
     "f.write(json.dumps(feature_names))\n",
     "f.close()\n",
     "\n",
-    "# Converting the sparse matrix to dense runs out of memory\n",
+    "# Converting the sparse matrix to dense matrix runs out of memory on large computer, don't bother/try this\n",
     "# features = pd.DataFrame(bag_of_words.toarray(), columns = feature_names)\n",
     "\n",
+    "# Document how long data preprocessing took\n",
     "print(\"FEATURE GENERATION TIME (depth=\", depth, \"): \", time.time() - start, \"s\", sep='')"
    ]
   },
@@ -125,6 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the features\n",
     "f = open(FEATURE_PATH, \"rb\")\n",
     "X = pickle.load(f)\n",
     "f.close()\n",
@@ -137,6 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Write labels\n",
     "import config\n",
     "importlib.reload(config)\n",
     "from config import *\n",
@@ -184,6 +192,7 @@
     "importlib.reload(config)\n",
     "from config import PALETTE\n",
     "\n",
+    "# Copied from ATCS - confusion matrix function\n",
     "def visualize_confusion_matrix(confusion):\n",
     "    sns.heatmap(confusion, annot = True, cmap=PALETTE, fmt=\"g\")\n",
     "    plt.xlim(0, 4)\n",
@@ -262,6 +271,7 @@
     "importlib.reload(config)\n",
     "from config import *\n",
     "\n",
+    "# Save y_pred and generate confusion matrix\n",
     "f = open(PREDICTIONS, \"wb\")\n",
     "pickle.dump(y_pred, f)\n",
     "f.close()\n",
@@ -276,6 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save the model and vectorizer - 6.5 hours each to generate\n",
     "import config\n",
     "importlib.reload(config)\n",
     "from config import *\n",
@@ -324,6 +335,7 @@
     }
    ],
    "source": [
+    "# Load vectorizer and model\n",
     "from config import *\n",
     "import pickle\n",
     "import importlib\n",
@@ -337,6 +349,7 @@
     "model = pickle.load(f)\n",
     "f.close()\n",
     "\n",
+    "# Score the text that is in the file\n",
     "f = open(\"example_review.txt\", \"r\")\n",
     "body = f.read()\n",
     "f.close()\n",
